# serializer version: 1
# name: test_compile[YAMLConfigFile-day_log_tmpl]
  '''
  {'notes': [{'areas': [],
              'body': '%',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' one_day ',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': '%',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}}],
   'todos': [{'areas': ['gtd'],
              'body': ' #gtd pomodoro',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-done_log_tmpl]
  '''
  {'notes': [{'areas': [],
              'body': '%',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' one_day ',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': '%',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}}],
   'todos': []}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-habit_log_tmpl]
  '''
  {'notes': [{'areas': [],
              'body': '%',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' one_day ',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': '%',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': '- CL ',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': '',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': '- pm routine ',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': '',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': '- pomodoros ',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': '',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}}],
   'todos': []}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-hello_tmpl]
  '''
  {'notes': [], 'todos': []}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-links]
  '''
  {'notes': [{'areas': [],
              'body': ' Some note with a bar.sh',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Some note with a link in parens (',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Some note with a link in parens and a block-level link (',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}}],
   'todos': []}
  
  '''
# ---
